
Release notes :

MTB V8

- If MIDIfile type is 0 then explode N channels from working track 0 to N tracks
- Visualisation Foutain
    - Calculate x,y,z velocity according to :
        - position of emitter
        - position of note target
        - Delay to reach it
    - Animate target octave/note
        - Emission color according to sphere note from track
    - Emitter along rotational curve
- parseRangeFromTracks return selectd Tracks of course but now, also noteMin, noteMax, OctaveCount
- New Visualization Fireworks V2 using Particles System
- New visualisation Fountain
    - Empirical formula for now
- Debug : Improve addIsoSphere. Mandatory parameters
- TODO
    - visualisation Fountain
        - What to do if mutitrack reach target at the same time
            - Multicolor ?
        - Test formula and driver to be more dynamic
    - Add a notion of draft and rendering version
    - Harmonize head of each function (comments)
    - Visualisation next :
        - https://www.youtube.com/watch?v=It9DOTaFA7Q&ab_channel=Polyfjord
        - Dancer
- FIX placing plans in BGAnimation

MTB V7

- Review for camelCase usage
- BarGraph view
    - Create multiple backplane versus only one, each of them to figure each octave used with different color
    - Fix Axe Y position for notes
- MatGlobalCustom
    - Renaming internal
    - Change colorRamp for emissionColor to be the same as for baseColor
    - baseColor and emissionColor are now black, white, blue, red, Yellow, green, cyan)
        - Blue to red is used for Light Animation intensity
- Animation Scale
    - Renamed as ZScale
- Animation Light
    - Adjust velocity away from the median towards the edges
- Adjust compositor
    BLOOM => MEDIUM quality, threshold = 5, size = 4
- New visualisation fireworks V1 using geometry nodes

MTB V6

- Remove channels objects and work only with track
    - Channel is a data used by device MIDI. Not very usefull in visualisation context