@@ -9,6 +9,8 @@ MTB V8
         - position of emitter
         - position of note target
         - Delay to reach it
+        - Gravity
+    - Use Blender drivers with formula to be more dynamic
     - Animate target octave/note
         - Emission color according to sphere note from track
     - Emitter along rotational curve
@@ -21,7 +23,6 @@ MTB V8
     - visualisation Fountain
         - What to do if mutitrack reach target at the same time
             - Multicolor ?
-        - Test formula and driver to be more dynamic
     - Add a notion of draft and rendering version
     - Harmonize head of each function (comments)
     - Visualisation next :
